--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-auth-demo": "file:",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
